fix: corrects errors-object alignment in column view

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -78,7 +78,7 @@ div.workshop-row {
   div.workshop-row {
     flex-direction: column;
   }
-  div.control-display-errors {
+  div.values-col {
     align-items: flex-start;
   }
 }
